# Wordle-Solver

./: CMakeLists.txt  README.md  fetch_valid_words.cpp  fetch_valid_words.py  initial_guesses.cpp  initial_guesses.py  valid_words.txt  wordle.cpp  wordle.py  wordle_solver.py
data/: starting_guesses.txt
include/: fetch_valid_words.hpp  initial_guesses.hpp  wordle_solver.hpp
src/: main.cpp  wordle_solver.cpp
utils/: fetch_valid_words.cpp  initial_guesses.cpp
